add_library(gclist gclist.cc gclist.h)
target_link_libraries(gclist PUBLIC persons catalog stage)
target_include_directories(gclist PUBLIC ${CMAKE_CURRENT_LIST_DIR})
add_executable(gclist-main1 gclist-main1.cc)
add_executable(gclist-main2 gclist-main2.cc)
add_executable(gclist-main3 gclist3 PRIVATE gclist)
target_link_libraries(gclist-main2 PRIVATE gclist)
target_link_libraries(gclist-main3 PRIVATE gclist)